--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "express": "~3.3.4",
-    "jade": "~0.34.0"
+    "jade": "~0.34.0",
+    "d3": "~3.3.4"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
