--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "dependencies": {
     "express": "~3.3.4",
     "jade": "~0.34.0",
-    "d3": "~3.3.4",
-    "sinon": "*"
+    "d3": "~3.3.4"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -21,6 +20,7 @@
     "matchdep": "*",
     "mocha": "~1.13.0",
     "chai": "~1.8.1",
+    "sinon": "*",
     "grunt-mocha-test": "~0.9.0",
     "grunt-webpack": "*"
   }
