--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "d3": "~3.3.4",
     "express": "~3.3.4",
     "grunt-express-server": "^0.4.17",
-    "jade": "~0.34.0"
+    "jade": "~0.34.0",
+    "underscore": "^1.6.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
