config adjustments to (hopefully) get heroku running

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node app",
+    "postinstall": "grunt build"
   },
   "dependencies": {
     "d3": "~3.3.4",
