--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "underscore": "^1.6.0"
   },
   "devDependencies": {
-    "grunt-develop": "~0.2.2",
+    "chai": "^1.9.1",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-develop": "~0.2.2",
+    "grunt-mocha-test": "~0.9.0",
+    "mocha": "^1.20.1",
     "request": "~2.27.0",
-    "mocha": "~1.13.0",
-    "chai": "~1.8.1",
-    "sinon": "*",
-    "grunt-mocha-test": "~0.9.0"
+    "sinon": "*"
   },
   "description": "Midi Visualizer (not at all ready for anything)",
   "main": "app.js",
