--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~0.34.0",
     "load-grunt-tasks": "~0.2.0",
     "matchdep": "*",
+    "three": "^0.67.0",
     "time-grunt": "~0.1.1",
     "underscore": "^1.6.0"
   },
@@ -23,6 +24,7 @@
     "chai": "^1.9.1",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-develop": "~0.2.2",
+    "grunt-mocha-istanbul": "^1.5.0",
     "grunt-mocha-test": "~0.9.0",
     "mocha": "^1.20.1",
     "request": "~2.27.0",
