--- a/package.json
+++ b/package.json
@@ -32,17 +32,16 @@
     "browserify": "^9.0.3",
     "code": "^1.4.0",
     "del": "^1.1.1",
-    "funtils": "^0.1.0",
-    "gulp-babel": "^4.0.0",
+    "funtils": "^0.2.0",
+    "gulp-filter": "^2.0.2",
     "gulp-lab": "^1.0.5",
     "gulp-rename": "^1.2.0",
     "hapi": "^8.4.0",
     "lab": "^5.5.1",
+    "lodash": "^3.6.0",
     "minimist": "^1.1.1",
-    "sinon": "^1.14.1",
     "sinon-es6": "0.0.3",
-    "through2": "^0.6.3",
-    "vinyl-transform": "^1.0.0"
+    "through2": "^0.6.3"
   },
   "dependencies": {
     "gulp": "^3.8.11"
