--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "./node_modules/gulp/bin/gulp.js test"
+    "test": "./node_modules/gulp/bin/gulp.js test",
+    "coverage": "./node_modules/gulp/bin/gulp.js coverage",
+    "build": "./node_modules/gulp/bin/gulp.js build"
   },
   "repository": {
     "type": "git",
@@ -26,20 +28,15 @@
   },
   "homepage": "https://github.com/edhille/midi-visualizer",
   "devDependencies": {
-    "babel": "^4.7.16",
-    "babel-core": "^4.7.16",
-    "babelify": "^5.0.4",
     "browserify": "^9.0.3",
     "code": "^1.4.0",
     "del": "^1.1.1",
     "funtils": "^0.2.0",
     "gulp-filter": "^2.0.2",
-    "gulp-lab": "^1.0.5",
     "gulp-rename": "^1.2.0",
-    "lab": "^5.5.1",
     "lodash": "^3.6.0",
     "minimist": "^1.1.1",
-    "sinon-es6": "0.0.3",
+    "mocha": "^2.2.1",
     "through2": "^0.6.3"
   },
   "dependencies": {
