--- a/.jshintrc
+++ b/.jshintrc
@@ -1,4 +1,11 @@
 {
 	"node": true,
-	"esnext": true
+	"freeze": true,
+	"quotmark": "single",
+	"eqeqeq": true,
+	"latedef": "nofunc",
+	"notypeof": true,
+	"singleGroups": true,
+	"undef": true,
+	"unused": true
 }
