--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash": "^3.6.0",
     "minimist": "^1.1.1",
     "mocha": "^2.2.1",
+    "rewire": "^2.3.1",
     "sinon": "^1.14.1",
     "through2": "^0.6.3"
   },
