--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "funtils": "^0.2.0",
     "gulp-filter": "^2.0.2",
     "gulp-rename": "^1.2.0",
+    "gulp-shell": "^0.4.1",
     "gulp-spawn-mocha": "^2.0.1",
+    "jsdoc": "^3.3.0-beta3",
     "lodash": "^3.6.0",
     "minimist": "^1.1.1",
     "mocha": "^2.2.1",
