--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "through2": "^0.6.3"
   },
   "dependencies": {
-    "gulp": "^3.8.11"
+    "gulp": "^3.8.11",
+    "three": "^0.71.0"
   }
 }
