--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "through2": "^0.6.3"
   },
   "dependencies": {
+    "es6-promise": "^2.1.1",
     "gulp": "^3.8.11",
     "three": "^0.71.0"
   }
