--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "es6-promise": "^2.1.1",
+    "fadt": "^1.1.0",
     "gulp": "^3.8.11",
     "three": "^0.71.0"
   }
