--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "es6-promise": "^2.1.1",
     "fadt": "^1.1.0",
+    "func-midi-parser": "^0.0.2",
     "gulp": "^3.8.11",
     "three": "^0.71.0"
   }
