--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "./node_modules/gulp/bin/gulp.js test",
-    "coverage": "./node_modules/gulp/bin/gulp.js coverage",
-    "build": "./node_modules/gulp/bin/gulp.js build"
+    "test": "./node_modules/mocha/bin/mocha test",
+    "coverage": "./node_modules/gulp/bin/gulp.js coverage"
   },
   "repository": {
     "type": "git",
@@ -28,29 +27,23 @@
   },
   "homepage": "https://github.com/edhille/midi-visualizer",
   "devDependencies": {
-    "browserify": "^9.0.3",
-    "chai": "^2.2.0",
-    "code": "^1.4.0",
-    "del": "^1.1.1",
-    "gulp-filter": "^2.0.2",
-    "gulp-rename": "^1.2.0",
-    "gulp-shell": "^0.4.1",
+    "chai": "^3.5.0",
+    "del": "^2.2.0",
+    "gulp": "^3.8.11",
     "gulp-spawn-mocha": "^2.0.1",
     "jsdoc": "^3.3.0-beta3",
-    "minimist": "^1.1.1",
-    "mocha": "^2.2.1",
+    "mocha": "^2.4.5",
     "rewire": "^2.3.1",
     "sinon": "^1.14.1",
-    "through2": "^0.6.3"
+    "through2": "^2.0.1"
   },
   "dependencies": {
     "d3": "^3.5.5",
-    "es6-promise": "^2.1.1",
+    "es6-promise": "^3.1.2",
     "fadt": "^1.1.0",
-    "func-midi-parser": "^0.0.2",
-    "funtils": "^0.2.0",
-    "gulp": "^3.8.11",
-    "lodash": "^3.6.0",
-    "three": "^0.71.0"
+    "func-midi-parser": "^0.0.4",
+    "funtils": "^0.3.2",
+    "lodash": "^4.5.0",
+    "three": "^0.74.0"
   }
 }
