--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "./node_modules/mocha/bin/mocha test",
     "ci-coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "local-coverage": "npm run clean && ./node_modules/istanbul/lib/cli.js cover _mocha test/**.spec.js",
-    "doc": "./node_modules/jsdoc-to-markdown/bin/cli.js --template jsdoc.template.hbs 'src/**/*.js'> README.md"
+    "doc": "./node_modules/jsdoc-to-markdown/bin/cli.js --template jsdoc.template.hbs 'src/**/*.js'> README.md",
+    "check-deps": "./node_modules/npm-check-updates/bin/ncu -e 2",
+    "update-deps": "./node_modules/npm-check-updates/bin/ncu -u -a"
   },
   "repository": {
     "type": "git",
@@ -39,6 +41,7 @@
     "jsdoc": "^3.3.0-beta3",
     "jsdoc-to-markdown": "^1.3.3",
     "mocha": "^2.4.5",
+    "npm-check-updates": "^2.8.0",
     "rewire": "^2.3.1",
     "sinon": "^1.14.1",
     "through2": "^2.0.1"
