--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "func-midi-visualizer",
   "version": "2.0.0",
   "description": "A functional-based visualizer for midi data, syncrhonized with audio file",
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -35,25 +38,25 @@
   "homepage": "https://github.com/edhille/midi-visualizer",
   "devDependencies": {
     "chai": "^3.5.0",
-    "coveralls": "^2.11.14",
+    "coveralls": "^2.13.0",
     "del": "^2.2.2",
+    "eslint": "^3.19.0",
     "istanbul": "^0.4.5",
-    "jsdoc": "^3.4.1",
-    "jsdoc-to-markdown": "^1.3.7",
-    "mocha": "^3.0.2",
-    "npm-check-updates": "^2.8.0",
+    "jsdoc": "^3.4.3",
+    "jsdoc-to-markdown": "^3.0.0",
+    "mocha": "^3.2.0",
+    "npm-check-updates": "^2.10.4",
     "rewire": "^2.5.2",
-    "sinon": "^1.17.6",
-    "through2": "^2.0.1"
+    "sinon": "^2.1.0",
+    "through2": "^2.0.3"
   },
   "dependencies": {
-    "d3": "^4.2.4",
-    "es6-promise": "^3.3.1",
-    "eslint": "^3.5.0",
-    "fadt": "^2.2.2",
-    "func-midi-parser": "^1.1.0",
+    "d3": "^4.7.4",
+    "es6-promise": "^4.1.0",
+    "fadt": "^2.2.3",
+    "func-midi-parser": "^1.3.1",
     "funtils": "^0.5.0",
-    "lodash": "^4.16.0",
-    "three": "^0.81.0"
+    "lodash": "^4.17.4",
+    "three": "^0.84.0"
   }
 }
