--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "fadt": "^2.2.4",
     "func-midi-parser": "^2.1.0",
     "funtils": "^0.5.0",
+    "graceful-readlink": "^1.0.1",
     "lodash": "^4.17.4",
-    "three": "^0.85.2"
+    "three": "^0.86.0"
   }
 }
